# bl1nk-agents-maneger

./: .gemini-extension-install.json  .gitignore  .gitignore   API.md  CONTRIBUTING.md  Cargo.toml  Config.example.toml  GEMINI.md  Makefile  QWEN.md  README.md  SECURITY.md  actual_files.txt  fix_frontmatter.py  gemini-extension.json  justfile  package.json
.agent/workflows/: githu-issue-triage.md  remove-deadcode.md
.gemini/: README.md  ralph-loop.local.md
.github/workflows/: codeql.yml
agents/: agent-creator.md  agent-sdk-verifier-py.md  agent-sdk-verifier-ts.md  agents.json  architect.md  cloudflare.md  codacy.md  code-architect.md  code-explorer.md  code-generator.md  code-reviewer.md  codebase-analyzer.md  codebase-locator.md  codebase-pattern-finder.md  comedian.md  command-creator.md  cowboy.md  creative-writer.md  deep-reflector.md  docbot-pro.md  docs-researcher.md  fullstack-dev.md  gen-z.md  github-issue-fixer.md  hookify-conversation-analyzer.md  human-3-coach.md  insight-documenter.md  instruction-reflector.md  kiro-workflow.md  orchestrator.md  pdf-to-ppt.md  pirate.md  plan-implementation-reviewer.md  plugin-validator.md  pr-reviewer.md  prompt-engineering-patterns.md  prompt-template-system.md  reporter.md  research-analyzer.md  shakespeare.md  (+10 more)
commands/: create-plugin.md  feature-dev.md  hookify-configure.md  hookify-help.md  hookify-list.md  hookify.md
commands/agent/: examples.toml  new.toml
config/: Config.toml
crates/core/: Cargo.toml  README.md
crates/core/src/: config.rs  lib.rs
crates/server/: README.md
crates/server/src/: main.rs
docs/: AGENT_CATALOG.md  AGENT_GUIDE.md  AGENT_MAINTENANCE.md  AGENT_SPECIFICATION.md  AGENT_USAGE_GUIDE.md  ARCHITECTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  guidline-agents-system.md  stucture.md
docs/hookify-examples/: console-log-warning.local.md  dangerous-rm.local.md  require-tests-stop.local.md  sensitive-files-warning.local.md
frontend/cli/: AGENTS.md
page/: index.html
scripts/: agent_manager.py  fix_agents.py  test_integration.py  validate_agents.py
scripts/hookify/learning-output-style/: README.md
service/: server.ts
service/agents/: agent.ts  project-manager.ts
service/agents/types/: agent.ts
service/orchestrator/: agent-runner.ts
skills/: skills.json
skills/action-architect/: README.md  SKILL.md
skills/action-architect/references/: README.md  examples-real-world.md
skills/agent-development/: README.md
skills/ai-workflow-orchestrator/: SKILL.md
skills/algorithmic-art/: SKILL.md
skills/artifacts-builder/: README.md  SKILL.md
skills/artifacts-builder/scripts/: README.md
skills/auto-dupicate-fixer/: IMPLEMENTATION_GUIDE.md  PERSONA.md  README.md  SKILL.md
skills/changelog-generator/: README.md  SKILL.md
skills/claude-command-creator/: SKILL.md
skills/claude-command-creator/references/: best-practices.md
skills/dify-extractor/: INDEX.md  SETUP.md  SKILL.md
skills/dify-extractor/docs/: api_reference.md  integration_guide.md
skills/dify-plugin-creator/: SKILL.md
skills/dify-plugin-creator/references/: DIFY_ARCHITECTURE.md
skills/hook-manager/: SKILL.md
skills/multi-format-orchestrator/: SKILL.md
skills/plugin-development/: SKILL.md
skills/plugin-settings/: SKILL.md
skills/poe-bot-script-creator/: SKILL.md
skills/poe-bot-script-creator/references/: architecture_spec.md  bot_templates.md  poe_sdk_reference.md
skills/poe-canvas-app/: SKILL.md
skills/poe-canvas-app/references/: api_reference.md  limitations.md
skills/sequential-thinking/: README.md  SKILL.md
skills/sequential-thinking/references/: advanced.md  examples.md
skills/skill-creator/: README.md
skills/skill-creator/references/: README.md
skills/skill-creator/scripts/: README.md
skills/web-artifacts-builder/: README.md  SKILL.md
skills/web-artifacts-builder/scripts/: README.md
skills/workflow-diagram/: SKILL.md
spec/: 001-concept.md  002-roadmap.md  003-goal.md
src/: config.rs  main.rs  rate_limit.rs
src/agents/: creator.rs  extractor.rs  mod.rs  register.rs  router.rs
src/mcp/: mod.rs  protocol.rs
src/system/: discovery.rs
(+74 files in other folders)
