[package]
name = "gemini-mcp-proxy"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Dual-mode MCP/ACP orchestrator for multi-agent systems"
license = "MIT"

[features]
default = ["schema-generation"]
schema-generation = ["pmcp/schema-generation"]
proptest = ["dep:proptest"]

[dependencies]
# Protocol implementations
pmcp = { version = "1.8", features = ["schema-generation"] }
agent-client-protocol = "0.6"

# Core async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"  # For JSON schema generation

# Error handling
anyhow = "1.0.99"

# Config parsing
toml = "0.8"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
regex = "1.0"
ignore = "0.4"
base64 = "0.22"
url = "2.5"
sha2 = "0.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID for task IDs
uuid = { version = "1.0", features = ["v4", "serde"] }

# Optional testing
proptest = { version = "1.0", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60.2", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
mockall = "0.13"
serial_test = "3.0"
uuid = { version = "1.0", features = ["v4"] }
once_cell = "1.19"

[[bin]]
name = "gemini-mcp-proxy"
path = "src/main.rs"