[package]
name = "gemini-mcp-proxy"
version = "0.2.0"
edition = "2021"
authors = ["billlzzz1808 <billlzzz1808@gmail.com>"]
description = "Dual-mode MCP/ACP orchestrator for multi-agent systems, with optional bundled PMAT."
license = "MIT"

# --- ส่วนที่เพิ่มเข้ามา: การกำหนด Features ---
[features]
# ค่าเริ่มต้นจะยังคงเหมือนเดิม เพื่อให้ไบนารีมีขนาดเล็กและคอมไพล์เร็ว
default = ["schema-generation"]

# ฟีเจอร์สำหรับเปิดใช้งาน JSON schema generation ของ pmcp
schema-generation = ["pmcp/schema-generation"]

# ฟีเจอร์สำหรับเปิดใช้งาน property-based testing
proptest = ["dep:proptest"]

# *** ฟีเจอร์ใหม่สำหรับรวม pmat เข้ามาในไบนารี ***
# เมื่อเปิดใช้ฟีเจอร์นี้ มันจะไปเปิดใช้งาน optional dependency ที่ชื่อ `pmat-core`
bundle-pmat = ["dep:pmat-core"]

# *** (แนะนำ) ฟีเจอร์เพื่อความสะดวก: bundle-pmat-full ***
# ฟีเจอร์นี้จะเปิดใช้ `bundle-pmat` และเปิดใช้ฟีเจอร์ 'full' ของ pmat-core อีกที
# ทำให้ได้ pmat เวอร์ชันเต็มความสามารถ (รองรับทุกภาษา) ในไบนารีเดียว
bundle-pmat-full = ["bundle-pmat", "pmat-core/full"]


# --- ส่วน Dependencies เดิมและส่วนที่เพิ่มเข้ามา ---
[dependencies]
# Protocol implementations
pmcp = { version = "1.8", features = ["schema-generation"] }
agent-client-protocol = "0.6"

# Core async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"  # For JSON schema generation

# Error handling
anyhow = "1.0.99"

# Config parsing
toml = "0.8"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
regex = "1.0"
ignore = "0.4"
base64 = "0.22"
url = "2.5"
sha2 = "0.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID for task IDs
uuid = { version = "1.0", features = ["v4", "serde"] }

# Optional testing
proptest = { version = "1.0", optional = true }

# --- ส่วนที่เพิ่มเข้ามา: Optional Dependency สำหรับ PMAT ---
# `optional = true` คือหัวใจสำคัญของแนวทางนี้
# มันจะถูกดาวน์โหลดและคอมไพล์ก็ต่อเมื่อมีฟีเจอร์อื่น (เช่น `bundle-pmat`) เรียกใช้เท่านั้น
pmat-core = { version = "2.214.0", optional = true, default-features = false }
# หมายเหตุ: เราใช้ `default-features = false` เพื่อควบคุมฟีเจอร์ของ pmat เองได้ละเอียดขึ้น


[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60.2", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
mockall = "0.13"
serial_test = "3.0"
uuid = { version = "1.0", features = ["v4"] }
once_cell = "1.19"

[[bin]]
name = "gemini-mcp-proxy"
path = "src/main.rs"
